--- a/style.css
+++ b/style.css
@@ -483,6 +483,8 @@ svg:nth-last-child(1){
 }
 
 #information {
-    font-size: 0;
+    font-size: 1px;
     height: 0;
+    color: #272727;
+    user-select: none;
 }
